--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: action/checkout@v4
-      - name: Setup JDK 20
+        uses: actions/checkout@v4
+      - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'Oracle'
