--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build & Deploy Spring app
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   build-deploy:
     name: Build and Deploy Employee Manager
