building application part 8

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build the application
         run: |
-          mvn clean
+          mvn clean package DskipTests --file pom.xml
           mvn -B package --file pom.xml
 
 
