--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,13 @@ spring:
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
+    Properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
     hibernate:
       ddl-auto: update
 
     show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+
 
