building application part 11

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,14 @@ jobs:
           mvn clean package DskipTests --file pom.xml
           mvn -B package --file pom.xml
 
+      - name: Build Docker Image
+        uses :  actions/build-push-action@v4
+        with:
+          context: .
+          dockerfile: Dockerfile
+          push: false
+          tags:
+
+
 
 
